fixed visibility of text on mobile

--- a/style.css
+++ b/style.css
@@ -163,4 +163,7 @@ img {
         opacity: 0.5;
         z-index: -999;
     }
+    h1, h3 {
+        text-shadow: 1px 2px black;
+    }
 }
